[project]
name = "emqx-rule-sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents",
    "prompt-toolkit",
    "tiktoken",
]

[project.scripts]
emqx-rule-sql-agent = "main:main"

[tool.black]
line-length = 120


